# ai-job-tracker-nl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: update.yml
data/: jobs.db
docs/: dashboard.html  data.json
src/: analyzer.py  classifier.py  dashboard.py  database.py  display.py  export.py  main.py  models.py  scrapers.py
