[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-job-tracker-nl"
version = "0.2.0"
description = "Track, classify, and visualise AI/ML/Data Science jobs in the Netherlands over time"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Linda Hoeberigs", email = "l.hoeberigs+site@gmail.com"}]
requires-python = ">=3.9"
keywords = ["jobs", "ai", "ml", "data-science", "netherlands", "tracker"]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
]

[project.scripts]
ai-jobs-nl = "src.main:main"
